html cleanup for dataset page, fixed "view all datasets" javascript, fixed image filenames

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li class="touchable separator {% if page.slug == "mitmachen" %}active{% endif %}">
-              <a href="{{ site.baseurl }}mitmachen/">Mitmachen!&nbsp;&#x25BE;</span></a>
+              <a href="{{ site.baseurl }}mitmachen/">Mitmachen!&nbsp;&#x25BE;</a>
               <ul class="nav navbar-nav">
                 <li><a {% if page.slug == "mitmachen" %}class="scroll-offset"{% endif %} href="{{ site.baseurl }}mitmachen/#kulturinstitution">Kulturinstitution</a></li>
                 <li><a class="{% if page.slug == "mitmachen" %}scroll-offset{% endif %}" href="{{ site.baseurl }}mitmachen/#teilnehmer">Teilnehmer/innen</a></li>
@@ -103,7 +103,7 @@
             <li class="separator {% if page.slug == "dokumentation" %}active{% endif %}">
               <a href="{{ site.baseurl }}english-infos/">
                 <span>English Infos</span>
-                <img class="english" src="{{ site.baseurl }}img/icons/unionflag.png" />
+                <img class="english" src="{{ site.baseurl }}img/icons/unionflag.png" alt="english" />
               </a>
             </li>
             <li class="image-menu-link">
@@ -130,9 +130,9 @@
           <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6 col-lg-pull-4 col-md-pull-5 col-sm-pull-6">
             <h5><a href="{{ site.baseurl }}kontakt/">Kontakt</a></h5>
             <p>
-            Helene Hahn</br>
-            Projektleiterin Coding da Vinci</br>
-            Mail: helene.hahn AT okfn.org</br>
+            Helene Hahn<br/>
+            Projektleiterin Coding da Vinci<br/>
+            Mail: helene.hahn AT okfn.org<br/>
             Tel: +49 30 57703666 2
             </p>
             <h5><a href="http://www.okfn.de/impressum/">Impressum</a></h5>
